tests/baselines/reference/badArrayIndex.errors.txt
==== tests/cases/compiler/badArrayIndex.ts (2 errors) ====
    var results = number[];
                         ~
!!! error TS1109: Expression expected.
                  ~~~~~~
!!! error TS2304: Cannot find name 'number'.